--- a/src/ADN.Threading/ADN.Threading.csproj
+++ b/src/ADN.Threading/ADN.Threading.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
-    <Version>1.1.0</Version>
+    <TargetFrameworks>netcoreapp2.0;net452</TargetFrameworks>
+    <Version>1.2.0</Version>
     <Title>ADN.Threading</Title>
     <Authors>Andrés Di Giovanni</Authors>
     <Company>ADN</Company>	
