--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,16 @@ language: csharp
 solution: ADN.Threading.sln
 mono: latest
 dotnet: 2.0.0
-script:
+
+addons:
+  sonarcloud:
+    organization: "andresdigiovanni-github"
+
+before_install:
+  - bash ./tools/travis-ci-install-sonar.sh
+
+install:
   - dotnet restore
-  - dotnet build ./src/ADN.Threading/
-  - dotnet build ./tests/ADN.Threading.Tests/
-  - dotnet test ./tests/ADN.Threading.Tests/
+
+script:
+  - bash ./tools/travis-ci-build.sh
